# waylay-sdk-data-py

./: Makefile  README.md  pyproject.toml  requirements.txt
.openapi-generator/: FILES
docs/: AboutApi.md  Aggregate.md  Auto.md  DeleteMessages200Response.md  (+70 more)
waylay-sdk-data-types/: README.md  pyproject.toml
waylay-sdk-data-types/.openapi-generator/: FILES
waylay-sdk-data-types/src/waylay/services/data/models/: __init__.py  aggregate.py  auto.py  delete_messages200_response.py  delete_series_from_parameter.py  empty.py  error_response.py  event.py  event_timestamp.py  get_datapoints_for_metric_raw200_response.py  get_datapoints_for_metric_raw200_response_links.py  get_metric_series_from_parameter.py  get_series200_response_inner.py  get_series200_response_inner_latest.py  grouping.py  grouping_any_of.py  grouping_auto.py  hal_link.py  latest_measurement.py  latest_value.py  measurements.py  message_query.py  message_query_from.py  message_query_result.py  message_query_result_item.py  message_query_result_results_inner.py  message_query_until.py  message_query_window.py  message_success_result.py  metric_summary.py  multiple_series_query_request_inner.py  object_data.py  order.py  post_series_for_resource_request.py  post_series_request.py  publish_event_response.py  publish_event_response_content.py  publish_event_response_content_any_of.py  publish_event_response_object_object.py  publish_resource_event_response.py  (+29 more)
waylay-sdk-data-types/src/waylay/services/data/queries/: __init__.py  about_api.py  events_api.py  messages_api.py  series_api.py  version_api.py
(+97 files in other folders)
