[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay-sdk-data-types"
version = "2.14.0b3"
description = "Waylay Broker Types "
authors = [
    { name = "Waylay", email = "info@waylay.io"}
]
keywords = ["Waylay Broker" , "Types"]
requires-python = ">= 3.9"
dependencies = [
    
    "pydantic ~= 2.6",
    "typing-extensions ~= 4.10",
    "eval-type-backport ~= 0.1.3; python_version < '3.10'",
]
readme = "README.md"
license={file = "LICENSE.txt"}

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "python-multipart",
    "typeguard",
    "pyyaml",
    "jsf >= 0.11.1",
]


[tool.setuptools.packages.find]
where = ["src/"]
namespaces = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
ignore-init-module-imports = true
# allow duplicate imports
ignore=["F811"]
# https://docs.astral.sh/ruff/rules
select= [
    "UP007", "FA102", "I001",  # convert Union to | (pep-604)
    "F401", "E303",  # remove unused imports
    "PIE790",  # remove unnecessary pass statements
]

[tool.ruff.lint.per-file-ignores]
# do not touch imports here
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"